# terricon-valley

./: .gitignore  README.md  agent-logs.md  debug_output.txt  documentation.md  pyproject.toml  run_powerhouse.py
.github/: copilot-instructions.md
src/: __main__.py  dashboard.py  data_explorer.py  eoz_downloader.py  fast_object_scraper.py  features.py  joiner.py  normalizer.py  plan_scraper.py  powerhouse_orderdetail_processor.py  risk_model.py
